--- a/About-Founder.html
+++ b/About-Founder.html
@@ -13,7 +13,7 @@
 		<meta name="msapplication-navbutton-color" content="#151515">
 		<!-- iOS Safari -->
 		<meta name="apple-mobile-web-app-status-bar-style" content="#151515">
-		<title>Import-Export Solutions | Connecting India and the UK</title>
+		<title>Connecting India And Global Trade In U.K And U.S.A</title>
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" sizes="56x56" href="images/fav-icon/icon.png">
 		<!-- Main style sheet -->
