--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta name="msapplication-navbutton-color" content="#151515">
 		<!-- iOS Safari -->
 		<meta name="apple-mobile-web-app-status-bar-style" content="#151515">
-		<title>Connecting India And Global Trade In U.K And U.S.A</title>
+		<title>Connecting India And Global Trade In U.K And U.S.A.</title>
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" sizes="56x56" href="images/fav-icon/icon.png">
 		<!-- Main style sheet -->
@@ -131,7 +131,7 @@
 				<div data-src="images/home/slide-2.jpg">
 					<div class="camera_caption text-center">
 						<div class="container">
-							<h1 class="wow fadeInUp animated"><span>Connecting India And</span> Global Trade &amp; In U.K And U.S.A</h1>
+							<h1 class="wow fadeInUp animated"><span>We are Your Bridge</span> Connecting India, U.S.A &amp; the UK in Trade</h1>
 							<p class="wow fadeInUp animated" data-wow-delay="0.2s">Effortlessly streamline global trade connections through trusted supplier networks. Deliver personalized service with strategic insights. Continuously innovate to enhance sourcing, logistics, and customer satisfaction.</p>
 							<a href="about.html" class="theme-button-one wow fadeInUp animated" data-wow-delay="0.278s">Read more</a>
 						</div> <!-- /.container -->
