--- a/About-Founder.html
+++ b/About-Founder.html
@@ -37,9 +37,6 @@
 			<!-- ===================================================
 				Loading Transition
 			==================================================== -->
-			<div id="loader-wrapper">
-				<div id="loader"></div>
-			</div>
 
 			<!-- ==================== Style Switcher ==================== -->
 			<div class="switcher">
@@ -295,7 +292,7 @@
 
 					<div class="view-all-project clearfix">
 						<p class="float-left">By adopting iterative approaches to supply chain strategy, we foster collaborative thinking and innovation,enabling businesses to optimize processes, reduce costs, and enhance their presence in these key markets.</p>
-						<a href="project-grid.html" class="theme-button-one float-right">View All Project</a>
+						<a href="project-grid.html" class="theme-button-one float-right">Contact Us</a>
 					</div> <!-- /.view-all-project -->
 				</div> <!-- /.container -->
 			</div> <!-- /.latest-project -->
