--- a/Why-India.html
+++ b/Why-India.html
@@ -37,9 +37,6 @@
 			<!-- ===================================================
 				Loading Transition
 			==================================================== -->
-			<div id="loader-wrapper">
-				<div id="loader"></div>
-			</div>
 
 			<!-- ==================== Style Switcher ==================== -->
 			<div class="switcher">
@@ -111,13 +108,13 @@
 									<ul class="clearfix">
 										<li><a href="index.html">Home</a>
 										</li>
-										<li><a href="#">About</a>
+										<li class="active"><a href="#">About</a>
 											<ul class="dropdown">
 												<li><a href="about.html">About Us</a></li>
 												<li><a href="Why-India.html">Why India?</a></li>
 										   </ul>
 										</li>
-										<li class="active"><a href="About-Founder.html">About Founder</a></li>
+										<li><a href="About-Founder.html">About Founder</a></li>
 										
 										<li><a href="contact.html">contact</a></li>
 								   </ul>
@@ -227,13 +224,13 @@
 							<div class="accordion-one">
 								<div class="panel-group theme-accordion" id="accordion">
 								  <div class="panel">
-								    <div class="panel-heading active-panel">
+								    <div class="panel-heading">
 								      <h6 class="panel-title">
 								        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
 											What makes India a unique destination for sourcing products?</a>
 								      </h6>
 								    </div>
-								    <div id="collapse1" class="panel-collapse collapse show">
+								    <div id="collapse1" class="panel-collapse">
 								      <div class="panel-body">
 								      	<p>India's rich cultural heritage, skilled craftsmanship, and diverse resources make it a global hub for high-quality, innovative products. With over 5,000 years of traditions reflected in its designs and manufacturing capabilities, India offers unparalleled creativity and value.</p>
 								      </div>
@@ -321,9 +318,7 @@
 						<button class="theme-button-one">Submit</button>
 					</form>
 				</div> <!-- /.container -->
-			</div> <!-- /.call-back-form-one -->
-
-
+			</div> <!-- /.call-back-form-one -->
 
 
 			<!--
@@ -371,12 +366,12 @@
 							</div> <!-- /.list-widget -->
 
 							<div class="col-lg-4 col-md-6 col-12 comment-widget">
-								<h6 class="title">Recent Reviews</h6>
+								<h6 class="title">Recent Reviewst</h6>
 								<ul>
 									<li class="clearfix">
 										<img src="images/blog/4.jpg" alt="">
 										<div class="text">
-											<p>"Fantastic service!Elements of India made our imports from India effortless. Highly recommend!" <span>Mark Wilson</span></p>
+											<p>"Fantastic service! [Client's Company Name] made our imports from India effortless. Highly recommend!" <span>Mark Wilson</span></p>
 											<div class="date"><i class="icon flaticon-clock"></i> May 25, 2018</div>
 										</div>
 									</li>
@@ -384,7 +379,7 @@
 										<img src="images/blog/5.jpg" alt="">
 										<div class="text">
 											<p>"A reliable partner for our UK exports. Their expertise truly sets them apart!"
-												<br><span>Priya Mehta</span></p>
+												<br><span>Priya Mehta</span></p>											
 											<div class="date"><i class="icon flaticon-clock"></i> May 25, 2018</div>
 										</div>
 									</li>
