--- a/about.html
+++ b/about.html
@@ -37,9 +37,6 @@
 			<!-- ===================================================
 				Loading Transition
 			==================================================== -->
-			<div id="loader-wrapper">
-				<div id="loader"></div>
-			</div>
 
 			<!-- ==================== Style Switcher ==================== -->
 			<div class="switcher">
@@ -162,7 +159,7 @@
 							<div class="text-wrapper">
 								<p>With a focus on delivering excellence, we provide comprehensive solutions that bridge the gap between Indian and UK markets. Our innovative strategies ensure streamlined operations and proactive domination in the global trade arena. </p>
 								<p>Leveraging our expertise, we help businesses adapt to the evolving demands of international markets. From sourcing and negotiations to logistics and quality control, we integrate multiple touchpoints to optimize your offshoring experience.								</p>
-								<a href="about.html" class="theme-button-one">View More Info</a>
+								
 							</div> <!-- /.text-wrapper -->
 						</div> <!-- /.col- -->
 						<div class="col-lg-6 col-12 wow fadeInRight animated">
@@ -216,7 +213,7 @@
 							<div class="col-lg-7 col-md-8 col-12">
 								<h2>"At Elements of India, we believe that morality, discipline, strong ethics, and transparency are the cornerstones of customer satisfaction and the foundation of lasting partnerships."								</h2>
 							</div>
-							<div class="col-lg-5 col-md-4 col-12"><a href="#" class="theme-button-one">Get A Quoat</a></div>
+							<div class="col-lg-5 col-md-4 col-12"><a href="contact.html" class="theme-button-one">Contact Us now</a></div>
 						</div>
 					</div> <!-- /.container -->
 				</div> <!-- /.overlay -->
@@ -251,13 +248,13 @@
 								    </div>
 								  </div> <!-- /panel 1 -->
 								  <div class="panel">
-								    <div class="panel-heading active-panel">
+								    <div class="panel-heading">
 								      <h6 class="panel-title">
 								        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
 											What documentation is required for import-export transactions?</a>
 								      </h6>
 								    </div>
-								    <div id="collapse2" class="panel-collapse collapse show">
+								    <div id="collapse2" class="panel-collapse collapse">
 								      <div class="panel-body">
 										<p>For import-export transactions, the following documentation is typically required: 
 											<ul>
