--- a/index.html
+++ b/index.html
@@ -581,35 +581,33 @@
 			</div> <!-- /.partner-section-one -->
 
 
-			<!-- Form Section -->
 			<div class="call-back-form-one section-spacing">
 				<div class="container">
-				<div class="theme-title-one text-center">
-					<h2 class="title">Request a Call Back</h2>
-				</div>
-				<!-- Form -->
-				<form id="callbackForm">
-					<div class="row">
-					<div class="col-lg-4 col-md-6 col-12"><input id="name" type="text" placeholder="Name"></div>
-					<div class="col-lg-4 col-md-6 col-12"><input id="email" type="email" placeholder="Email"></div>
-					<div class="col-lg-4 col-12"><input id="phone" type="text" placeholder="Phone"></div>
-					<div class="col-lg-4 col-12">
-						<select id="discussionTopic" class="form-control">
-						<option value="">I would like to discuss</option>
-						<option value="Import Services">Import Services</option>
-						<option value="Export Services">Export Services</option>
-						<option value="Logistics and Shipping">Logistics and Shipping</option>
-						<option value="Customs Clearance">Customs Clearance</option>
-						</select>
-						<input id="otherTopic" type="text" placeholder="Any Other Topic">
-					</div>
-					<div class="col-lg-8 col-12"><textarea id="message" placeholder="Your Words"></textarea></div>
-					</div>
-					<button type="submit" class="theme-button-one">Submit</button>
-				</form>
-				</div>
-			</div>
-  
+					<div class="theme-title-one text-center">
+						<h2 class="title">Call Back</h2>
+					</div> <!-- /.theme-title-one -->
+					<form id="callbackForm">
+						<div class="row">
+							<div class="col-lg-4 col-md-6 col-12"><input type="text" id="name" placeholder="Name"></div>
+							<div class="col-lg-4 col-md-6 col-12"><input type="email" id="email" placeholder="Email"></div>
+							<div class="col-lg-4 col-12"><input type="text" id="phone" placeholder="Phone"></div>
+							<div class="col-lg-4 col-12">
+								<select class="form-control" id="discussionTopic">
+									<option>I would like to discuss</option>
+									<option>Import Services</option>
+									<option>Export Services</option>
+									<option>Logistics and Shipping</option>
+									<option>Customs Clearance</option>
+								</select>
+								<input type="text" id="otherTopic" placeholder="Any Other Topic">
+							</div>
+							<div class="col-lg-8 col-12"><textarea id="message" placeholder="Your Words"></textarea></div>
+						</div>
+						<button type="submit" class="theme-button-one">Submit</button>
+					</form>
+				</div> <!-- /.container -->
+			</div> <!-- /.call-back-form-one -->
+			
 			  
 			
 
