--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
 			<div class="call-back-form-one section-spacing">
 				<div class="container">
 					<div class="theme-title-one text-center">
-						<h2 class="title">Request a Call Back</h2>
+						<h2 class="title">Call Back</h2>
 					</div> <!-- /.theme-title-one -->
 					<form id="callbackForm">
 						<div class="row">
@@ -904,6 +904,7 @@
 			  }
 			});
 		  </script>
+		  
 		  
 	</body>
 </html>
