solving form error

--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
 			<div class="call-back-form-one section-spacing">
 				<div class="container">
 					<div class="theme-title-one text-center">
-						<h2 class="title">Call Back</h2>
+						<h2 class="title">Request a Call Back</h2>
 					</div> <!-- /.theme-title-one -->
 					<form id="callbackForm">
 						<div class="row">
@@ -875,7 +875,7 @@
 			  const message = document.getElementById("message").value;
 		  
 			  // Your Google Apps Script Web App URL
-			  const scriptURL = "https://script.google.com/macros/s/AKfycbxU5NLlvgHvHvCzAAyr8wmSLOL3dDhDTBtnot0qpSgYHx11kJGfy3D_u0LCgDuYLNe1/exec";
+			  const scriptURL = "https://script.google.com/macros/s/AKfycbxCKAyOGLlrP-B_BBAL55Ass-UQFG5NXlrT0_FDfPrsHnheiYq3gL7r72qycwMwsYQk/exec";
 		  
 			  try {
 				// Send data to Google Sheets
