why india page update

--- a/Why-India.html
+++ b/Why-India.html
@@ -179,9 +179,9 @@
 						<p>India, a land of unparalleled diversity, stands as a beacon of unity amidst its rich cultural and historical heritage. With over 5,000 years of art, traditions, and philosophy, India is a living testament to resilience and creativity. </p>
 					</div>
                     <div class="image-container">
-                        <img src="images/portfolio/1.jpg" alt="Image 1">
-                        <img src="images/portfolio/2.jpg" alt="Image 2">
-                        <img src="images/portfolio/3.jpg" alt="Image 3">
+                        <img src="images/portfolio/1.png" alt="Image 1">
+                        <img src="images/portfolio/2.png" alt="Image 2">
+                        <img src="images/portfolio/3.png" alt="Image 3">
                       </div>
                     <br><br>
 					<p class="text">These values are intricately woven into every facet of life, from its vibrant culture to the exceptional products it offers to the world. This fusion is evident in India’s vast array of products, reflecting its unmatched heritage and creative strength.	</p>
@@ -193,8 +193,8 @@
                         A global leader in manufacturing, with an unmatched capability to produce diverse categories of goods.</p>
                     
 				</div> <!-- /.container -->
-
-                <!--
+          <br><br>
+            <!--
 			=====================================================
 				FAQ Section
 			=====================================================
@@ -203,19 +203,19 @@
 				<img src="images/home/img-man-1.png" alt="" class="man-image wow fadeInUp animated" data-wow-delay="0.3s">
 				<div class="container clearfix">
 					<div class="main-wrapper">
-						<div class="faq-tab-wrapper">
+						<div>
 							<h2 class="title">Frequently Asked Questions</h2>
 
 							<div class="accordion-one">
 								<div class="panel-group theme-accordion" id="accordion">
 								  <div class="panel">
-								    <div class="panel-heading active-panel">
+								    <div class="panel-heading">
 								      <h6 class="panel-title">
 								        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
 											What makes India a unique destination for sourcing products?</a>
 								      </h6>
 								    </div>
-								    <div id="collapse1" class="panel-collapse collapse show">
+								    <div id="collapse1" class="panel-collapse collapse">
 								      <div class="panel-body">
 								      	<p>India's rich cultural heritage, skilled craftsmanship, and diverse resources make it a global hub for high-quality, innovative products. With over 5,000 years of traditions reflected in its designs and manufacturing capabilities, India offers unparalleled creativity and value.</p>
 								      </div>
