--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
 		<!-- Theme-Color css -->
 		<link rel="stylesheet" id="jssDefault" href="css/color.css">
 
-		<!-- Fix Internet Explorer ______________________________________-->
-		<!--[if lt IE 9]>
-			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-			<script src="vendor/html5shiv.js"></script>
-			<script src="vendor/respond.js"></script>
-		<![endif]-->	
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
 	</head>
 
 	<body>
@@ -584,7 +582,7 @@
 			<div class="call-back-form-one section-spacing">
 				<div class="container">
 					<div class="theme-title-one text-center">
-						<h2 class="title">Call Back</h2>
+						<h2 class="title">request a Call Back</h2>
 					</div> <!-- /.theme-title-one -->
 					<form id="contactForm"> <!-- Updated id to match the script -->
 						<div class="row">
@@ -870,60 +868,74 @@
 				});
 			});
 		</script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 		<script>
-		  $(document).ready(function() {
-			$('#contactForm').on('submit', function(e) {
-			  e.preventDefault();
-			  
-			  var name = $('#name').val();
-			  var email = $('#email').val();
-			  var phone = $('#phone').val();
-			  var subject = $('#discussionTopic').val();
-			  var message = $('#otherTopic').val();
-			  var message = $('#message').val();
-	  
-			  $.ajax({
-				url: 'https://script.google.com/macros/s/AKfycbzVbGF23x0oE7wnf-U_XM3xm9668Ykav7-3DzRg0z67icxrSxCkKJPrHjENDwEQefV0/exec', // Replace with your Google Apps Script URL
-				method: 'POST',
-				data: {
-				  name: name,
-				  email: email,
-				  phone: phone,
-				  discussionTopic: discussionTopic,
-				  otherTopic: otherTopic,
-				  message: message
-				},
-				success: function(response) {
-				  toastr.success('Form submitted successfully!');
-				  setTimeout(function() {
-					window.location.href = 'https://element.biz499.in/';
-				  }, 3000);
-				},
-				error: function() {
-				  toastr.error('There was an error submitting the form. Please try again.');
-				}
-			  });
-			  });
+			$(document).ready(function () {
+				console.log("Script initialized");
+		
+				$('#contactForm').on('submit', function (e) {
+					e.preventDefault();
+					console.log('Form submitted');
+		
+					var name = $('#name').val();
+					var email = $('#email').val();
+					var phone = $('#phone').val();
+					var discussionTopic = $('#discussionTopic').val();
+					var otherTopic = $('#otherTopic').val();
+					var message = $('#message').val();
+		
+					console.log({
+						name: name,
+						email: email,
+						phone: phone,
+						discussionTopic: discussionTopic,
+						otherTopic: otherTopic,
+						message: message
+					});
+		
+					$.ajax({
+						url: 'https://script.google.com/macros/s/AKfycbzVbGF23x0oE7wnf-U_XM3xm9668Ykav7-3DzRg0z67icxrSxCkKJPrHjENDwEQefV0/exec', // Replace with your Google Apps Script URL
+						method: 'POST',
+						data: {
+							name: name,
+							email: email,
+							phone: phone,
+							discussionTopic: discussionTopic,
+							otherTopic: otherTopic,
+							message: message
+						},
+						success: function (response) {
+							console.log('Success response:', response);
+							toastr.success('Form submitted successfully!');
+							setTimeout(function () {
+								window.location.href = 'https://element.biz499.in/';
+							}, 3000);
+						},
+						error: function (xhr, status, error) {
+							console.error('Error response:', error);
+							toastr.error('There was an error submitting the form. Please try again.');
+						}
+					});
 				});
-			
+		
 				toastr.options = {
-				"closeButton": true,
-				"debug": false,
-				"newestOnTop": false,
-				"progressBar": false,
-				"positionClass": "toast-top-full-width",
-				"preventDuplicates": false,
-				"onclick": null,
-				"showDuration": "300",
-				"hideDuration": "1000",
-				"timeOut": "5000",
-				"extendedTimeOut": "1000",
-				"showEasing": "swing",
-				"hideEasing": "linear",
-				"showMethod": "fadeIn",
-				"hideMethod": "fadeOut"
-			}
-    </script>
+					"closeButton": true,
+					"debug": false,
+					"newestOnTop": false,
+					"progressBar": false,
+					"positionClass": "toast-top-full-width",
+					"preventDuplicates": false,
+					"onclick": null,
+					"showDuration": "300",
+					"hideDuration": "1000",
+					"timeOut": "5000",
+					"extendedTimeOut": "1000",
+					"showEasing": "swing",
+					"hideEasing": "linear",
+					"showMethod": "fadeIn",
+					"hideMethod": "fadeOut"
+				};
+			});
+		</script>
+		
 	</body>
 </html>
