--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
 			<div class="call-back-form-one section-spacing">
 				<div class="container">
 					<div class="theme-title-one text-center">
-						<h2 class="title"> Call Back</h2>
+						<h2 class="title">Request a Call Back</h2>
 					</div> <!-- /.theme-title-one -->
 					<form id="contactForm"> <!-- Updated id to match the script -->
 						<div class="row">
@@ -868,23 +868,22 @@
 			});
 		</script>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
 		
 		<script>
 			$(document).ready(function() {
-				// Handle form submission
 				$('#contactForm').on('submit', function(e) {
 					e.preventDefault();
 		
 					var name = $('#name').val();
 					var email = $('#email').val();
 					var phone = $('#phone').val();
-					var discussionTopic = $('#discussionTopic').val(); // Get discussion topic
-					var otherTopic = $('#otherTopic').val(); // Get other topic if filled
+					var discussionTopic = $('#discussionTopic').val();
+					var otherTopic = $('#otherTopic').val();
 					var message = $('#message').val();
 		
-					// Prepare data for submission
 					var data = {
 						name: name,
 						email: email,
@@ -895,9 +894,10 @@
 					};
 		
 					$.ajax({
-						url: 'https://script.google.com/macros/s/AKfycbzVbGF23x0oE7wnf-U_XM3xm9668Ykav7-3DzRg0z67icxrSxCkKJPrHjENDwEQefV0/exec', 
+						url: 'https://script.google.com/macros/s/AKfycbzrws4eHdjOOfpxx4f70ZSegWQs8bff-MHkNoxaTTd194QFL3Mtuz0ET3QQ-ZlC_5lc/exec',
 						method: 'POST',
-						data: data,
+						data: JSON.stringify(data), // Ensure the data is sent as JSON
+						contentType: 'application/json', // Set content type
 						success: function(response) {
 							if (response.result === 'success') {
 								toastr.success('Form submitted successfully!');
@@ -915,26 +915,14 @@
 					});
 				});
 		
-				// Toastr configuration
 				toastr.options = {
 					"closeButton": true,
-					"debug": false,
-					"newestOnTop": false,
-					"progressBar": false,
 					"positionClass": "toast-top-full-width",
-					"preventDuplicates": false,
-					"onclick": null,
-					"showDuration": "300",
-					"hideDuration": "1000",
 					"timeOut": "5000",
-					"extendedTimeOut": "1000",
-					"showEasing": "swing",
-					"hideEasing": "linear",
-					"showMethod": "fadeIn",
-					"hideMethod": "fadeOut"
-				}
+				};
 			});
 		</script>
+		
 		
 		
 	</body>
