solving form errori

--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
 			<div class="call-back-form-one section-spacing">
 				<div class="container">
 					<div class="theme-title-one text-center">
-						<h2 class="title">Request a Call Back</h2>
+						<h2 class="title"> Call Back</h2>
 					</div> <!-- /.theme-title-one -->
 					<form id="contactForm"> <!-- Updated id to match the script -->
 						<div class="row">
@@ -887,7 +887,7 @@
 					};
 		
 					$.ajax({
-						url: 'https://script.google.com/macros/s/AKfycbz-plOFs0Z1w_6y6oCbTd0-hzhrFVmlMqKIPQ3SrdTOYeNvlnbpVrh4nItrWALCVQwl/exec',
+						url: 'https://script.google.com/macros/s/AKfycbwHR6tDOBvEAH3b87GpsTSQJGWBJJjrauxDgpFCwKd2JmFmzGZDxUukVt5UweZoBV8_/exec',
 						method: 'POST',
 						data: JSON.stringify(data),
 						contentType: 'application/json',
