solving form error

--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
 				if (response.result === 'success') {
 				toastr.success('Form submitted successfully!');
 				setTimeout(function() {
-					window.location.href = 'https://element.biz499.in/';
+					window.location.href = 'https://element.biz499.in/index.html';
 				}, 3000);
 				} else {
 				toastr.error('Failed to submit the form. Please try again.');
